include/siecs.h

/* Resource id in the separate resource namespace. */
typedef uint16_t ecs_resource_t;
/*
 * Resource registration descriptor.
 *
 * Resources are per-world singleton values with their own id space. name and
 * size are required; hooks are optional. Present resources are finalized in
 * reverse first-registration order.
 */
typedef struct {
    const char *name;
    uint64_t size;
    ecs_type_ops_t ops;
    ecs_resource_hook_t on_set;
    ecs_resource_hook_t on_remove;
} ecs_resource_desc_t;
/* Register a resource descriptor in the active world and return its id. */
SIECS_API ecs_resource_t ecs_resource_init(const ecs_resource_desc_t *desc);
/* Find a registered resource by name; returns 0 when absent. */
SIECS_API ecs_resource_t ecs_resource_find(const char *name);
/* Return whether a resource id is registered in the active world. */
SIECS_API bool ecs_resource_is_registered_rid(ecs_resource_t id);
/* Register a resource using stable id storage; returns the resulting id. */
SIECS_API ecs_resource_t ecs_resource_register(ecs_resource_t *id, const ecs_resource_desc_t *desc);
/* Copy or move data into a registered resource. */
SIECS_API void ecs_set_resource_rid(ecs_resource_t id, const void *data);
/* Move an initialized resource value into storage and consume the source. */
SIECS_API void ecs_move_resource_rid(ecs_resource_t id, void *data);
/* Return a resource pointer (resource must exist), or NULL for try access. */
SIECS_API void *ecs_resource_rid(ecs_resource_t id);
/* Return resource storage or NULL when the resource is absent. */
SIECS_API void *ecs_try_resource_rid(ecs_resource_t id);
/* Test/remove a resource in the active world. */
SIECS_API bool ecs_has_resource_rid(const ecs_resource_t id);
/* Remove a resource and run its destructor/hook; no-op when absent. */
SIECS_API void ecs_remove_resource_rid(ecs_resource_t id);